Hook up component testing with working sass output.

--- a/cads/base/index.scss
+++ b/cads/base/index.scss
@@ -3,7 +3,7 @@
 // ========================================================
 //
 
-@import "@citizensadvice/cads-support/"; // order matters
+@import "../support/index.scss"; // order matters
 
 @import "./lib/normalize"; // order matters
 @import "./lib/typography";
