--- a/cads/radios/index.scss
+++ b/cads/radios/index.scss
@@ -3,5 +3,5 @@
 // ========================================================
 //
 
-@import "@citizensadvice/cads-support/"; // order matters
+@import "../support/index.scss"; // order matters
 @import "./lib/radios";
