--- a/cads/utilities/lib/spacing/margins.scss
+++ b/cads/utilities/lib/spacing/margins.scss
@@ -243,7 +243,7 @@
   margin-bottom: $spacing-7 !important;
 }
 
-@media #{$breakpoint-not-3all} {
+@media #{$breakpoint-not-small} {
   .m-0-ns {
     margin: $spacing-0 !important;
   }
