--- a/cads/utilities/lib/spacing/padding.scss
+++ b/cads/utilities/lib/spacing/padding.scss
@@ -243,7 +243,7 @@
   padding-bottom: $spacing-7 !important;
 }
 
-@media #{$breakpoint-not-3all} {
+@media #{$breakpoint-not-small} {
   .p-0-ns {
     padding: $spacing-0 !important;
   }
