--- a/cads/utilities/index.scss
+++ b/cads/utilities/index.scss
@@ -25,6 +25,7 @@
 @import "./lib/layout/floats";
 @import "./lib/layout/heights";
 @import "./lib/layout/positioning";
+@import "./lib/layout/widths";
 @import "./lib/layout/z-index";
 
 @import "./lib/spacing/margins";
@@ -38,5 +39,6 @@
 @import "./lib/typography/line-height";
 @import "./lib/typography/line-limit";
 @import "./lib/typography/text-colors";
+@import "./lib/typography/text-decoration";
 
 @import "./lib/visibility/display";
