--- a/component-testing/output.css
+++ b/component-testing/output.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800");
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800");
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -8,6 +7,8 @@
  * 2. Prevent adjustments of font size after orientation changes in
  *    IE on Windows Phone and in iOS.
  */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800");
 html {
   line-height: 1.15;
@@ -467,6 +468,18 @@ ul,
 ol,
 .ol {
   list-style-type: decimal; }
+
+a,
+.a {
+  border-bottom: 1px solid currentColor;
+  color: #004b88;
+  text-decoration: none; }
+  a:hover,
+  .a:hover {
+    background-color: #caeaff; }
+  a:focus,
+  .a:focus {
+    outline: 0.125rem solid #fcbb69; }
 
 .bg-heritage-blue {
   background-color: #004b88 !important; }
@@ -1166,6 +1179,9 @@ ol,
 
 .hover-pointer:hover {
   cursor: pointer !important; }
+
+.outline-none {
+  outline: 0; }
 
 html {
   box-sizing: border-box; }
@@ -2310,6 +2326,18 @@ html {
 
   .left-7-l {
     left: 2.5rem !important; } }
+.char-width-2 {
+  max-width: 7.2ex !important; }
+
+.char-width-4 {
+  max-width: 10.8ex !important; }
+
+.char-width-8 {
+  max-width: 21ex !important; }
+
+.char-width-20 {
+  max-width: 41.4ex !important; }
+
 .z-index-0 {
   z-index: 0 !important; }
 
@@ -4041,6 +4069,9 @@ html {
 .text-red-primary {
   color: #df3034 !important; }
 
+.no-underline {
+  text-decoration: none; }
+
 .hidden {
   display: none !important; }
 
@@ -4141,5 +4172,30 @@ html {
   .table-fixed-l {
     table-layout: fixed !important;
     width: 100% !important; } }
+.radio {
+  min-height: 3.25rem; }
+  .radio input[type="radio"] {
+    height: 1.5rem; }
+    .radio input[type="radio"]::before {
+      border-style: solid !important;
+      border-color: #dfdfdf;
+      border-radius: 0.125rem;
+      border-width: 0.125rem;
+      background-color: #f2f2f2;
+      content: '';
+      cursor: pointer;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: -1; }
+    .radio input[type="radio"]:checked::before {
+      background-color: #caeaff;
+      border-color: #229cff; }
+    .radio input[type="radio"]:hover::before {
+      border-color: #9f9f9f; }
+    .radio input[type="radio"]:focus::before {
+      border-color: #fcbb69; }
 
 /*# sourceMappingURL=output.css.map */
