--- a/component-testing/styles.scss
+++ b/component-testing/styles.scss
@@ -1,3 +1,4 @@
 @import "../cads/support/index.scss";
 @import "../cads/base/index.scss";
-@import "../cads/utilities/index.scss"
+@import "../cads/utilities/index.scss";
+@import "../cads/radios/index.scss"
