--- a/cads/utilities/lib/borders/border-radius.scss
+++ b/cads/utilities/lib/borders/border-radius.scss
@@ -26,3 +26,7 @@
 .border-radius-5 {
   border-radius: $border-scale-5 !important;
 }
+
+.border-radius-6 {
+  border-radius: $border-scale-6 !important;
+}
