--- a/component-testing/styles.scss
+++ b/component-testing/styles.scss
@@ -1,6 +1,4 @@
 @import "../cads/support/index.scss";
 @import "../cads/base/index.scss";
 @import "../cads/utilities/index.scss";
-@import "../cads/radios/index.scss";
-@import "../cads/checkbox/index.scss"   
- 
+@import "../cads/radio-checkbox/index.scss";
