--- a/cads/base/index.scss
+++ b/cads/base/index.scss
@@ -5,7 +5,7 @@
 
 @import "../support/index.scss"; // order matters
 
-@import "./lib/normalize"; // order matters
+@import "./lib/normalize.v8.0.1"; // order matters
 @import "./lib/typography";
 @import "./lib/lists";
 @import "./lib/links";
