--- a/cads/utilities/index.scss
+++ b/cads/utilities/index.scss
@@ -14,6 +14,7 @@
 @import "./lib/borders/border-radius";
 @import "./lib/borders/border-style";
 @import "./lib/borders/border-width";
+@import "./lib/borders/outlines";
 
 @import "./lib/interactive/hovers"; // order matters
 @import "./lib/interactive/focus"; // order matters
