--- a/cads/utilities/lib/borders/border-width.scss
+++ b/cads/utilities/lib/borders/border-width.scss
@@ -27,6 +27,10 @@
   border-width: $border-scale-5 !important;
 }
 
+.border-width-6 {
+  border-width: $border-scale-6 !important;
+}
+
 /* Resets */
 .border-top-width-0 {
   border-top-width: $border-scale-none !important;
