- Renaming of utility classes.

--- a/cads/utilities/lib/borders/border-colors.scss
+++ b/cads/utilities/lib/borders/border-colors.scss
@@ -3,86 +3,86 @@
 // ========================================================
 //
 
-.border-heritage-blue {
+.b-heritage-blue {
   border-color: $heritage-blue !important;
 }
 
-.border-heritage-blue-40 {
+.b-heritage-blue-40 {
   border-color: $heritage-blue-40 !important;
 }
 
-.border-heritage-yellow-40 {
+.b-heritage-yellow-40 {
   border-color: $heritage-yellow-40 !important;
 }
 
-.border-blue-dark {
+.b-blue-dark {
   border-color: $blue-dark !important;
 }
 
-.border-blue-primary {
+.b-blue-primary {
   border-color: $blue-primary !important;
 }
 
-.border-blue-mid {
+.b-blue-mid {
   border-color: $blue-mid !important;
 }
 
-.border-blue-light {
+.b-blue-light {
   border-color: $blue-light !important;
 }
 
-.border-turquoise-dark {
+.b-turquoise-dark {
   border-color: $turquoise-dark !important;
 }
 
-.border-turqouise-primary {
+.b-turqouise-primary {
   border-color: $turqouise-primary !important;
 }
 
-.border-turqouise-mid {
+.b-turqouise-mid {
   border-color: $turqouise-mid !important;
 }
 
-.border-turqouise-light {
+.b-turqouise-light {
   border-color: $turqouise-light !important;
 }
 
-.border-red-light {
+.b-red-light {
   border-color: $red-light !important;
 }
 
-.border-black {
+.b-black {
   border-color: $black !important;
 }
 
-.border-dark-grey {
+.b-dark-grey {
   border-color: $dark-grey !important;
 }
 
-.border-mid-grey {
+.b-mid-grey {
   border-color: $mid-grey !important;
 }
 
-.border-grey {
+.b-grey {
   border-color: $grey !important;
 }
 
-.border-light-grey {
+.b-light-grey {
   border-color: $light-grey !important;
 }
 
-.border-pale-grey {
+.b-pale-grey {
   border-color: $pale-grey !important;
 }
 
-.border-white {
+.b-white {
   border-color: $white !important;
 }
 
-.border-heritage-yellow {
+.b-heritage-yellow {
   border-color: $heritage-yellow !important;
 }
 
-.border-red-primary {
+.b-red-primary {
   border-color: $red-primary !important;
 }
