--- a/cads/utilities/lib/borders/border-style.scss
+++ b/cads/utilities/lib/borders/border-style.scss
@@ -3,18 +3,18 @@
 // ========================================================
 //
 
-.border-dotted {
+.b-dotted {
   border-style: dotted !important;
 }
 
-.border-dashed {
+.b-dashed {
   border-style: dashed !important;
 }
 
-.border-solid {
+.b-solid {
   border-style: solid !important;
 }
 
-.border-none {
+.b-none {
   border-style: none !important;
 }
