--- a/cads/utilities/lib/borders/border-width.scss
+++ b/cads/utilities/lib/borders/border-width.scss
@@ -3,47 +3,47 @@
 // ========================================================
 //
 
-.border-width-0 {
+.b-width-0 {
   border-width: $border-scale-none !important;
 }
 
-.border-width-1 {
+.b-width-1 {
   border-width: $border-scale-1 !important;
 }
 
-.border-width-2 {
+.b-width-2 {
   border-width: $border-scale-2 !important;
 }
 
-.border-width-3 {
+.b-width-3 {
   border-width: $border-scale-3 !important;
 }
 
-.border-width-4 {
+.b-width-4 {
   border-width: $border-scale-4 !important;
 }
 
-.border-width-5 {
+.b-width-5 {
   border-width: $border-scale-5 !important;
 }
 
-.border-width-6 {
+.b-width-6 {
   border-width: $border-scale-6 !important;
 }
 
 /* Resets */
-.border-top-width-0 {
+.b-top-width-0 {
   border-top-width: $border-scale-none !important;
 }
 
-.border-right-width-0 {
+.b-right-width-0 {
   border-right-width: $border-scale-none !important;
 }
 
-.border-bottom-width-0 {
+.b-bottom-width-0 {
   border-bottom-width: $border-scale-none !important;
 }
 
-.border-left-width-0 {
+.b-left-width-0 {
   border-left-width: $border-scale-none !important;
 }
