--- a/cads/utilities/lib/interactive/focus.scss
+++ b/cads/utilities/lib/interactive/focus.scss
@@ -88,87 +88,87 @@
   color: $red-primary !important;
 }
 
-.focus-border-heritage-blue:focus {
+.focus-b-heritage-blue:focus {
   border-color: $heritage-blue !important;
 }
 
-.focus-border-heritage-blue-40:focus {
+.focus-b-heritage-blue-40:focus {
   border-color: $heritage-blue-40 !important;
 }
 
-.focus-border-heritage-yellow-40:focus {
+.focus-b-heritage-yellow-40:focus {
   border-color: $heritage-yellow-40 !important;
 }
 
-.focus-border-blue-dark:focus {
+.focus-b-blue-dark:focus {
   border-color: $blue-dark !important;
 }
 
-.focus-border-blue-primary:focus {
+.focus-b-blue-primary:focus {
   border-color: $blue-primary !important;
 }
 
-.focus-border-blue-mid:focus {
+.focus-b-blue-mid:focus {
   border-color: $blue-mid !important;
 }
 
-.focus-border-blue-light:focus {
+.focus-b-blue-light:focus {
   border-color: $blue-light !important;
 }
 
-.focus-border-turquoise-dark:focus {
+.focus-b-turquoise-dark:focus {
   border-color: $turquoise-dark !important;
 }
 
-.focus-border-turqouise-primary:focus {
+.focus-b-turqouise-primary:focus {
   border-color: $turqouise-primary !important;
 }
 
-.focus-border-turqouise-mid:focus {
+.focus-b-turqouise-mid:focus {
   border-color: $turqouise-mid !important;
 }
 
-.focus-border-turqouise-light:focus {
+.focus-b-turqouise-light:focus {
   border-color: $turqouise-light !important;
 }
 
-.focus-border-red-light:focus {
+.focus-b-red-light:focus {
   border-color: $red-light !important;
 }
 
-.focus-border-black:focus {
+.focus-b-black:focus {
   border-color: $black !important;
 }
 
-.focus-border-dark-grey:focus {
+.focus-b-dark-grey:focus {
   border-color: $dark-grey !important;
 }
 
-.focus-border-mid-grey:focus {
+.focus-b-mid-grey:focus {
   border-color: $mid-grey !important;
 }
 
-.focus-border-grey:focus {
+.focus-b-grey:focus {
   border-color: $grey !important;
 }
 
-.focus-border-light-grey:focus {
+.focus-b-light-grey:focus {
   border-color: $light-grey !important;
 }
 
-.focus-border-pale-grey:focus {
+.focus-b-pale-grey:focus {
   border-color: $pale-grey !important;
 }
 
-.focus-border-white:focus {
+.focus-b-white:focus {
   border-color: $white !important;
 }
 
-.focus-border-heritage-yellow:focus {
+.focus-b-heritage-yellow:focus {
   border-color: $heritage-yellow !important;
 }
 
-.focus-border-red-primary:focus {
+.focus-b-red-primary:focus {
   border-color: $red-primary !important;
 }
 
