--- a/cads/utilities/lib/interactive/hovers.scss
+++ b/cads/utilities/lib/interactive/hovers.scss
@@ -87,87 +87,87 @@
   color: $red-primary !important;
 }
 
-.hover-border-heritage-blue:hover {
+.hover-b-heritage-blue:hover {
   border-color: $heritage-blue !important;
 }
 
-.hover-border-heritage-blue-40:hover {
+.hover-b-heritage-blue-40:hover {
   border-color: $heritage-blue-40 !important;
 }
 
-.hover-border-heritage-yellow-40:hover {
+.hover-b-heritage-yellow-40:hover {
   border-color: $heritage-yellow-40 !important;
 }
 
-.hover-border-blue-dark:hover {
+.hover-b-blue-dark:hover {
   border-color: $blue-dark !important;
 }
 
-.hover-border-blue-primary:hover {
+.hover-b-blue-primary:hover {
   border-color: $blue-primary !important;
 }
 
-.hover-border-blue-mid:hover {
+.hover-b-blue-mid:hover {
   border-color: $blue-mid !important;
 }
 
-.hover-border-blue-light:hover {
+.hover-b-blue-light:hover {
   border-color: $blue-light !important;
 }
 
-.hover-border-turquoise-dark:hover {
+.hover-b-turquoise-dark:hover {
   border-color: $turquoise-dark !important;
 }
 
-.hover-border-turqouise-primary:hover {
+.hover-b-turqouise-primary:hover {
   border-color: $turqouise-primary !important;
 }
 
-.hover-border-turqouise-mid:hover {
+.hover-b-turqouise-mid:hover {
   border-color: $turqouise-mid !important;
 }
 
-.hover-border-turqouise-light:hover {
+.hover-b-turqouise-light:hover {
   border-color: $turqouise-light !important;
 }
 
-.hover-border-red-light:hover {
+.hover-b-red-light:hover {
   border-color: $red-light !important;
 }
 
-.hover-border-black:hover {
+.hover-b-black:hover {
   border-color: $black !important;
 }
 
-.hover-border-dark-grey:hover {
+.hover-b-dark-grey:hover {
   border-color: $dark-grey !important;
 }
 
-.hover-border-mid-grey:hover {
+.hover-b-mid-grey:hover {
   border-color: $mid-grey !important;
 }
 
-.hover-border-grey:hover {
+.hover-b-grey:hover {
   border-color: $grey !important;
 }
 
-.hover-border-light-grey:hover {
+.hover-b-light-grey:hover {
   border-color: $light-grey !important;
 }
 
-.hover-border-pale-grey:hover {
+.hover-b-pale-grey:hover {
   border-color: $pale-grey !important;
 }
 
-.hover-border-white:hover {
+.hover-b-white:hover {
   border-color: $white !important;
 }
 
-.hover-border-heritage-yellow:hover {
+.hover-b-heritage-yellow:hover {
   border-color: $heritage-yellow !important;
 }
 
-.hover-border-red-primary:hover {
+.hover-b-red-primary:hover {
   border-color: $red-primary !important;
 }
 
