--- a/cads/utilities/lib/typography/text-colors.scss
+++ b/cads/utilities/lib/typography/text-colors.scss
@@ -3,86 +3,86 @@
 // ========================================================
 //
 
-.text-heritage-blue {
+.heritage-blue {
   color: $heritage-blue !important;
 }
 
-.text-heritage-blue-40 {
+.heritage-blue-40 {
   color: $heritage-blue-40 !important;
 }
 
-.text-heritage-yellow-40 {
+.heritage-yellow-40 {
   color: $heritage-yellow-40 !important;
 }
 
-.text-blue-dark {
+.blue-dark {
   color: $blue-dark !important;
 }
 
-.text-blue-primary {
+.blue-primary {
   color: $blue-primary !important;
 }
 
-.text-blue-mid {
+.blue-mid {
   color: $blue-mid !important;
 }
 
-.text-blue-light {
+.blue-light {
   color: $blue-light !important;
 }
 
-.text-turquoise-dark {
+.turquoise-dark {
   color: $turquoise-dark !important;
 }
 
-.text-turqouise-primary {
+.turqouise-primary {
   color: $turqouise-primary !important;
 }
 
-.text-turqouise-mid {
+.turqouise-mid {
   color: $turqouise-mid !important;
 }
 
-.text-turqouise-light {
+.turqouise-light {
   color: $turqouise-light !important;
 }
 
-.text-red-light {
+.red-light {
   color: $red-light !important;
 }
 
-.text-black {
+.black {
   color: $black !important;
 }
 
-.text-dark-grey {
+.dark-grey {
   color: $dark-grey !important;
 }
 
-.text-mid-grey {
+.mid-grey {
   color: $mid-grey !important;
 }
 
-.text-grey {
+.grey {
   color: $grey !important;
 }
 
-.text-light-grey {
+.light-grey {
   color: $light-grey !important;
 }
 
-.text-pale-grey {
+.pale-grey {
   color: $pale-grey !important;
 }
 
-.text-white {
+.white {
   color: $white !important;
 }
 
-.text-heritage-yellow {
+.heritage-yellow {
   color: $heritage-yellow !important;
 }
 
-.text-red-primary {
+.red-primary {
   color: $red-primary !important;
 }
