--- a/cads/utilities/lib/borders/border-radius.scss
+++ b/cads/utilities/lib/borders/border-radius.scss
@@ -3,30 +3,30 @@
 // ========================================================
 //
 
-.border-radius-0 {
+.b-radius-0 {
   border-radius: $border-scale-none !important;
 }
 
-.border-radius-1 {
+.b-radius-1 {
   border-radius: $border-scale-1 !important;
 }
 
-.border-radius-2 {
+.b-radius-2 {
   border-radius: $border-scale-2 !important;
 }
 
-.border-radius-3 {
+.b-radius-3 {
   border-radius: $border-scale-3 !important;
 }
 
-.border-radius-4 {
+.b-radius-4 {
   border-radius: $border-scale-4 !important;
 }
 
-.border-radius-5 {
+.b-radius-5 {
   border-radius: $border-scale-5 !important;
 }
 
-.border-radius-6 {
+.b-radius-6 {
   border-radius: $border-scale-6 !important;
 }
