--- a/cads/utilities/lib/borders/borders.scss
+++ b/cads/utilities/lib/borders/borders.scss
@@ -3,32 +3,32 @@
 // ========================================================
 //
 
-.border {
+.ba {
   border-style: solid !important;
-  border-width: 1px !important;
+  border-width: $border-scale-1 !important;
 }
 
-.border-top {
+.b-top {
   border-top-style: solid !important;
-  border-top-width: 1px !important;
+  border-top-width: $border-scale-1 !important;
 }
 
-.border-right {
+.b-right {
   border-right-style: solid !important;
-  border-right-width: 1px !important;
+  border-right-width: $border-scale-1 !important;
 }
 
-.border-bottom {
+.b-bottom {
   border-bottom-style: solid !important;
-  border-bottom-width: 1px !important;
+  border-bottom-width: $border-scale-1 !important;
 }
 
-.border-left {
+.b-left {
   border-left-style: solid !important;
-  border-left-width: 1px !important;
+  border-left-width: $border-scale-1 !important;
 }
 
-.border-none {
+.b-none {
   border-style: none !important;
-  border-width: 0 !important;
+  border-width: $border-scale-none !important;
 }
