--- a/cads/utilities/index.scss
+++ b/cads/utilities/index.scss
@@ -39,6 +39,7 @@
 @import "./lib/typography/letter-spacing";
 @import "./lib/typography/line-height";
 @import "./lib/typography/line-limit";
+@import "./lib/typography/text-align";
 @import "./lib/typography/text-colors";
 @import "./lib/typography/text-decoration";
 
