--- a/cads/utilities/lib/layout/widths.scss
+++ b/cads/utilities/lib/layout/widths.scss
@@ -19,276 +19,105 @@
   max-width: $char-width-20 !important;
 }
 
-.w-10 {
-  width: 10%;
-}
-
-.w-20 {
-  width: 20%;
-}
-
-.w-25,
 .w-quarter {
   width: 25%;
 }
 
-.w-30 {
-  width: 30%;
-}
-
-.w-33,
 .w-third {
   width: 33%;
 }
 
-.w-34 {
-  width: 34%;
-}
-
-.w-40 {
-  width: 40%;
-}
-
-.w-50,
 .w-half,
   {
   width: 50%;
 }
 
-.w-60 {
-  width: 60%;
-}
-
-.w-66,
 .w-two-thirds {
   width: 60%;
 }
 
-.w-70 {
-  width: 70%;
-}
-
-.w-75,
 .w-three-quarters {
   width: 75%;
 }
 
-.w-80 {
-  width: 80%;
-}
-
-.w-90 {
-  width: 90%;
-}
-
-.w-100,
 .w-full {
   width: 100%;
 }
 
 @media #{$breakpoint-not-small} {
-  .w-10-ns {
-    width: 10%;
-  }
-
-  .w-20-ns {
-    width: 20%;
-  }
-
-  .w-25-ns,
   .w-quarter-ns {
     width: 25%;
   }
-
-  .w-30-ns {
-    width: 30%;
-  }
-
-  .w-33-ns,
+  
   .w-third-ns {
     width: 33%;
   }
-
-  .w-34-ns {
-    width: 34%;
-  }
-
-  .w-40-ns {
-    width: 40%;
-  }
-
-  .w-50-ns,
-  .w-half-ns,
-  -ns {
+  
+  .w-half-ns {
     width: 50%;
   }
-
-  .w-60-ns {
-    width: 60%;
-  }
-
-  .w-66-ns,
+  
   .w-two-thirds-ns {
     width: 60%;
   }
-
-  .w-70-ns {
-    width: 70%;
-  }
-
-  .w-75-ns,
+  
   .w-three-quarters-ns {
     width: 75%;
   }
-
-  .w-80-ns {
-    width: 80%;
-  }
-
-  .w-90-ns {
-    width: 90%;
-  }
-
-  .w-100-ns,
+  
   .w-full-ns {
     width: 100%;
-  }
+  } 
 }
 
 @media #{$breakpoint-medium} {
-  .w-10-m {
-    width: 10%;
-  }
-
-  .w-20-m {
-    width: 20%;
-  }
-
-  .w-25-m,
   .w-quarter-m {
     width: 25%;
   }
-
-  .w-30-m {
-    width: 30%;
-  }
-
-  .w-33-m,
+  
   .w-third-m {
     width: 33%;
   }
-
-  .w-34-m {
-    width: 34%;
-  }
-
-  .w-40-m {
-    width: 40%;
-  }
-
-  .w-50-m,
-  .w-half-m,
-  -m {
+  
+  .w-half-m {
     width: 50%;
   }
-
-  .w-60-m {
-    width: 60%;
-  }
-
-  .w-66-m,
+  
   .w-two-thirds-m {
     width: 60%;
   }
-
-  .w-70-m {
-    width: 70%;
-  }
-
-  .w-75-m,
+  
   .w-three-quarters-m {
     width: 75%;
   }
-
-  .w-80-m {
-    width: 80%;
-  }
-
-  .w-90-m {
-    width: 90%;
-  }
-
-  .w-100-m,
+  
   .w-full-m {
     width: 100%;
-  }
+  } 
 }
 
 @media #{$breakpoint-large} {
-  .w-10-l {
-    width: 10%;
-  }
-
-  .w-20-l {
-    width: 20%;
-  }
-
-  .w-25-l,
   .w-quarter-l {
     width: 25%;
   }
-
-  .w-30-l {
-    width: 30%;
-  }
-
-  .w-33-l,
+  
   .w-third-l {
     width: 33%;
   }
-
-  .w-34-l {
-    width: 34%;
-  }
-
-  .w-40-l {
-    width: 40%;
-  }
-
-  .w-50-l,
-  .w-half-l,
-  -l {
+  
+  .w-half-l {
     width: 50%;
   }
-
-  .w-60-l {
-    width: 60%;
-  }
-
-  .w-66-l,
+  
   .w-two-thirds-l {
     width: 60%;
   }
-
-  .w-70-l {
-    width: 70%;
-  }
-
-  .w-75-l,
+  
   .w-three-quarters-l {
     width: 75%;
   }
-
-  .w-80-l {
-    width: 80%;
-  }
-
-  .w-90-l {
-    width: 90%;
-  }
-
-  .w-100-l,
+  
   .w-full-l {
     width: 100%;
-  }
+  } 
 }
